syntax = "proto3";

package userservice;

option go_package = "./";

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 domain = 3;
}

message LoginResponse {
    string jwt = 1;
}
